fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,9 @@ h2 {
 }
 
 .post-container {
+  display:grid;
   grid-area: 3 / 2 / 3 / 4;
+
   /*border:1px dotted blue;*/
 
 }
@@ -218,7 +220,7 @@ h2 {
         grid-row-start: 4;
         grid-row-end: 5;
   }
-    
+
     .footer {
         grid-column-start: 1;
         grid-column-end: 5;
